<resources>
    <string name="app_name">Prueba</string>
    <string name="title_explorar">Explorar</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="title_reservas">Reservas</string>
    <string name="title_registro">Registro</string>
    <string name="title_notificaciones">Notificaciones</string>
    <string name="title_perfil">Perfil</string>
    <string name="text_perfil_titulo">¿Ya tienes una cuenta?</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Contraseña</string>
    <string name="perfil_password_olvidada">¿Has olvidado tu contraseña?</string>
    <string name="perfil_login_button">Inicia sesión</string>
    <string name="perfil_sin_cuenta">¿Todavía no tienes una cuenta?</string>
    <string name="registro">Regístrate</string>
    <string name="logout_botton">Cerrar Sesión</string>
    <string name="registro_nombres_hint">Nombre</string>
    <string name="registro_identificacion_hint">Identificación</string>
    <string name="registro_promociones">No quiero recibir consejos de
    viaje ni promociones.</string>
    <string name="registro_politica_privacidad">Te enviaremos ofertas especiales
    y promociones publicitarias por correo electrónico. Puedes cancelar
    tu suscripción en cualquier momento. Para más información,
    lee nuestra política de privacidad.</string>
    <string name="registro_confirmacion">Al proceder, confirmas que
        aceptas nuestros Términos de uso</string>
    <string name="query_hint">Dubái,Paris</string>
    <string name="date_init_hint">Ida</string>
    <string name="date_return_hint">Vuelta</string>
    <string name="birth_hint">Fecha de nac.</string>
    <string name="internet_connection">Por favor revise su conexión a internet y vuelva a intentarlo </string>

</resources>