<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explorar"
        android:icon="@mipmap/ic_explorar"
        android:title="@string/title_explorar" />

    <item
        android:id="@+id/navigation_favoritos"
        android:icon="@mipmap/ic_fav"
        android:title="@string/title_favoritos" />
    <item
        android:id="@+id/navigation_reservas"
        android:icon="@mipmap/ic_reserva"
        android:title="@string/title_reservas"/>
    <item
        android:id="@+id/navigation_notificaciones"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notificaciones" />
    <item
       android:id="@+id/navigation_perfil"
        android:icon="@mipmap/ic_persona"
        android:title="@string/title_perfil"/>

</menu>